@@ -49,7 +49,7 @@ T clamp (const T& low, const T& v, const T& high)
 } // namespace Math
 
 // Change the sign
-inline int16_t negate_16(int16_t v)
+inline int16_t s16_invert(int16_t v)
 {
   if (v)
     return static_cast<int16_t>(~v);
@@ -67,6 +67,7 @@ inline int16_t scale_8to16(int8_t a)
 
 /** converts the arbitary range to [-1,1] */
 float to_float(int value, int min, int max);
+float to_float_no_range_check(int value, int min, int max);
 
 /** converts the range [-1,1] to [min,max] */
 int from_float(float value, int min, int max);
